--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "msi-xmd-bot",
   "version": "2.1.0",
-  "description": "MSI XMD WhatsApp Bot with Pairing Code System",
+  "description": "MSI XMD WhatsApp Bot with Pairing Code",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "render-start": "node server.js",
     "pair": "node src/pair.js",
+    "postinstall": "echo 'Dependencies installed successfully'",
     "test": "echo \"No tests specified\""
   },
   "engines": {
@@ -34,4 +35,4 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-}
+}}
