--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
   "name": "msi-xmd-bot",
-  "version": "2.1.0",
+  "version": "2.0.0",
   "description": "MSI XMD WhatsApp Bot with Pairing Code",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "render-start": "node server.js",
-    "pair": "node src/pair.js",
-    "postinstall": "echo 'Dependencies installed successfully'",
-    "test": "echo \"No tests specified\""
+    "pair": "node src/pair.js"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=18.0.0"
   },
   "keywords": [
     "whatsapp",
     "bot",
     "baileys",
     "msi-xmd",
-    "pairing-code",
     "render"
   ],
   "author": "MSI Team",
@@ -35,4 +30,4 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-}}
+}
