Modify bot configuration in .env file
Updated bot name and removed unnecessary settings.

--- a/.env
+++ b/.env
@@ -1,14 +1,11 @@
 # MSI XMD Bot Configuration
-BOT_NAME="MSI XMD"
-BOT_VERSION="2.1.0"
-BOT_PREFIX="."
-BOT_OWNER="MSI Team"
+BOT_NAME=MSAI XMD
+BOT_PREFIX=.
 
-# Render specific
-RENDER=true
+# WhatsApp Phone Number (with country code)
+# Example: +263787795039
+WHATSAPP_NUMBER=+263715907468
+
+# Server
 PORT=3000
-PAIRING_MODE=true
-
-# WhatsApp settings
-WHATSAPP_COUNTRY_CODE="+263"
-WHATSAPP_NUMBER="7715907468"
+NODE_ENV=production
