Update package.json and fix async/await error
Updated package.json and fixed async/await error in bot.js.

--- a/package.json
+++ b/package.json
@@ -1,25 +1,120 @@
-{
-  "name": "msi-xmd-bot",
-  "version": "2.1.0",
-  "description": "MSI XMD WhatsApp Bot with Phone Number Pairing",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "pair:local": "WHATSAPP_NUMBER=+263715907468 node server.js",
-    "test": "echo \"No tests specified\""
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "dependencies": {
-    "@whiskeysockets/baileys": "^6.5.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "pino": "^8.15.6",
-    "qrcode-terminal": "^0.12.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+// src/bot.js - Fixed async/await error
+const { default: makeWASocket, useMultiFileAuthState, DisconnectReason, fetchLatestBaileysVersion } = require('@whiskeysockets/baileys');
+const pino = require('pino');
+
+class MSIXMDBot {
+    constructor() {
+        this.sock = null;
+        this.authFolder = './auth_info';
+        this.prefix = '.';
+        this.phoneNumber = process.env.WHATSAPP_NUMBER;
+        this.init();
+    }
+
+    async init() {
+        try {
+            if (!this.phoneNumber) {
+                console.log('❌ WHATSAPP_NUMBER environment variable not set');
+                console.log('👉 Set it in Render environment variables');
+                console.log('👉 Format: +1234567890');
+                return;
+            }
+
+            console.log(`📱 Phone number set: ${this.phoneNumber}`);
+            
+            const { state, saveCreds } = await useMultiFileAuthState(this.authFolder);
+            const { version } = await fetchLatestBaileysVersion();
+            
+            this.sock = makeWASocket({
+                version,
+                logger: pino({ level: 'silent' }),
+                auth: state,
+            });
+
+            this.sock.ev.on('creds.update', saveCreds);
+
+            this.sock.ev.on('connection.update', (update) => {
+                const { connection, lastDisconnect } = update;
+                
+                if (connection === 'open') {
+                    console.log('✅ WhatsApp connected successfully!');
+                    console.log('⚡ MSI XMD Bot is now online!');
+                }
+
+                if (connection === 'close') {
+                    const shouldReconnect = lastDisconnect?.error?.output?.statusCode !== DisconnectReason.loggedOut;
+                    if (shouldReconnect) {
+                        setTimeout(() => this.init(), 5000);
+                    }
+                }
+            });
+
+            // Generate pairing code
+            if (this.phoneNumber && !state.creds.me) {
+                await this.generatePairingCode();
+            }
+
+            // Handle messages
+            this.sock.ev.on('messages.upsert', (m) => {
+                const msg = m.messages[0];
+                if (!msg.message || msg.key.fromMe) return;
+                
+                const text = msg.message.conversation || '';
+                if (text.startsWith('.')) {
+                    this.handleCommand(text, msg);
+                }
+            });
+
+        } catch (error) {
+            console.error('❌ Bot initialization error:', error.message);
+            setTimeout(() => this.init(), 5000);
+        }
+    }
+
+    async generatePairingCode() {
+        try {
+            console.log('\n🔢 Generating pairing code...');
+            const code = await this.sock.requestPairingCode(this.phoneNumber);
+            
+            console.log('\n' + '='.repeat(50));
+            console.log('✅ PAIRING CODE GENERATED!');
+            console.log('='.repeat(50));
+            console.log('\n📱 On your phone:');
+            console.log('1. Open WhatsApp → Settings → Linked Devices');
+            console.log('2. Tap "Link a Device"');
+            console.log('3. Select "Link with phone number"');
+            console.log('4. Enter this 6-digit code:');
+            console.log('\n' + '🔢 '.repeat(6));
+            console.log('      ' + this.formatPairingCode(code));
+            console.log('🔢 '.repeat(6));
+            console.log('\n5. Wait for confirmation...');
+            console.log('='.repeat(50));
+            
+        } catch (error) {
+            console.error('❌ Pairing error:', error.message);
+        }
+    }
+
+    formatPairingCode(code) {
+        if (code.length === 6) {
+            return code.substring(0, 3) + ' ' + code.substring(3);
+        }
+        return code;
+    }
+
+    handleCommand(text, msg) {
+        const commands = {
+            '.ping': '🏓 Pong!',
+            '.help': '📋 Commands: .ping .help .info .status .pair',
+            '.info': '🤖 MSI XMD Bot v2.1.0 - Pairing Code System',
+            '.status': '✅ Bot is online and connected',
+            '.pair': `📱 Pairing: ${this.phoneNumber ? 'Phone number set' : 'Not configured'}`
+        };
+
+        const response = commands[text] || '❌ Unknown command. Type .help for commands';
+        this.sock.sendMessage(msg.key.remoteJid, { text: response });
+    }
 }
+
+// Start bot
+const bot = new MSIXMDBot();
